<resources>
    <string name="app_name">考勤通</string>
    <string name="title_home">考勤</string>
    <string name="title_dashboard">我的考勤</string>
    <string name="title_notifications">个人信息</string>
    <string name="login_or_register">登录/注册</string>
    <string name="face_recognize">人脸识别</string>
    <string name="edit_event">编辑考勤事件</string>
    <string name="event_detail">事件详情</string>
    <string name="modify_event">修改事件</string>
    <string name="select_location">选择地点</string>
    <string name="get_event_statistics">查看统计数据</string>
    <string name="no_data">没有数据</string>
    <string name="confirm">确认</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_string">登录</string>
    <string name="account_string">邮箱</string>
    <string name="password_string">密码</string>
    <string name="register_note">没有账号？注册一个</string>
    <string name="register_string">注册</string>
    <string name="conform_password_string">确认密码</string>
    <string name="name_string">姓名</string>
    <string name="face_data_commit_button_string">录入人脸数据</string>
    <string name="face_data_recommit_button_string">重新录入人脸数据</string>
    <string name="face_data_uncommitted_note">人脸数据尚未录入！请点击下方按钮录入！</string>
    <string name="face_data_committed_note">人脸数据已录入</string>

    <string name="face_detect_not_found_note">请将相机对准人脸</string>
    <string name="face_detect_detecting_note">检测中，请保持相机稳定</string>

    <string name="logout_button_string">退出登录</string>
    <string name="change_password_button_string">修改密码</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>

    <string name="attendance_event_name">事件名称</string>
    <string name="event_cycle">事件周期</string>
    <string name="date">日期</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>

    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
    <string name="attendance_position">考勤地点</string>
    <string name="attendance_location_range">考勤范围</string>
    <string name="attendance_location_range_note">范围大小</string>
    <string name="select_attendance_position">选择地点</string>
    <string name="select_position_note">将屏幕中心拖到想要的位置\n</string>

    <string name="submit">提交</string>
    <string name="cross_day_warning_note">结束时间将会延续到次日！</string>
    <string name="interval_too_short_warning_note">结束时间与开始时间相距太近，建议大于十分钟！</string>


    <string name="QR_code_use_note">上面的二维码用于给被考勤人员扫描考勤，可截图保存</string>

    <string name="detail_id">ID：</string>
    <string name="detail_name">事件名称：</string>
    <string name="detail_creator_name">创建人：</string>
    <string name="detail_cycle">事件周期：</string>
    <string name="detail_date">事件日期：</string>
    <string name="detail_repetition">重复：</string>
    <string name="detail_start_time">开始时间：</string>
    <string name="detail_end_time">结束时间：</string>

</resources>