<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_attendance">

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.attendance.ui.attendance.AttendanceFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_my_attendance"
        android:name="com.example.attendance.ui.myAttendance.MyAttendanceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_my_attendance" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.attendance.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>